final project sp22

--- a/server/package.json
+++ b/server/package.json
@@ -9,9 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^5.0.1",
-    "express": "^4.17.3",
-    "mongoose": "^6.3.0",
-    "mysql": "^2.18.1"
+    "bcrypt": "*",
+    "express": "*",
+    "mongoose": "*",
+    "mysql": "*"
   }
 }
