--- a/server/package.json
+++ b/server/package.json
@@ -4,15 +4,16 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "test": "jest"
     },
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "bcrypt": "*",
+        "bcrypt": "^5.1.1",
         "cors": "*",
         "express": "*",
         "express-session": "*",
+        "jest": "^29.7.0",
         "jsonwebtoken": "*",
         "mongoose": "*",
         "mysql": "*"
