--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -1,46 +1,18 @@
-name: Continuous Integration Test
-
-on:
-  pull_request:
-    branches: [ main ]
-
+name: GitHub Actions Demo
+run-name: ${{ github.actor }} is testing out GitHub Actions 🚀
+on: [push]
 jobs:
-  jest-tests:
+  Explore-GitHub-Actions:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '21'
-    - name: Install dependencies
-      run: npm install
-    - name: Run Jest tests
-      run: npm test
-      env:
-        CI: true
-
-  cypress-tests:
-    runs-on: ubuntu-latest
-    services:
-      # If your tests interact with a database or other services, you can set them up here
-      # Example for setting up a dummy server:
-      # dummy-server:
-      #   image: nginx
-      #   ports:
-      #     - 80:80
-    steps:
-    - uses: actions/checkout@v2
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: '21'
-    - name: Install dependencies
-      run: npm install
-    - name: Install Cypress
-      run: npm install cypress
-    - name: Run Cypress tests
-      run: npx cypress run
-      env:
-        CI: true
-
+      - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: echo "🐧 This job is now running on a ${{ runner.os }} server hosted by GitHub!"
+      - run: echo "🔎 The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
+      - name: Check out repository code
+        uses: actions/checkout@v4
+      - run: echo "💡 The ${{ github.repository }} repository has been cloned to the runner."
+      - run: echo "🖥️ The workflow is now ready to test your code on the runner."
+      - name: List files in the repository
+        run: |
+          ls ${{ github.workspace }}
+      - run: echo "🍏 This job's status is ${{ job.status }}."
