--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -2,7 +2,7 @@ name: Continuous Integration Tests
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ testdev ]
 
 jobs:
   jest-tests:
