--- a/server/package.json
+++ b/server/package.json
@@ -10,9 +10,12 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
+        "body-parser": "^1.20.2",
+        "cookie-parser": "^1.4.6",
         "cors": "*",
-        "express": "*",
-        "express-session": "*",
+        "csurf": "^1.11.0",
+        "express": "^4.19.2",
+        "express-session": "^1.18.0",
         "jest": "^29.7.0",
         "jsonwebtoken": "*",
         "mongoose": "*",
