--- a/server/package.json
+++ b/server/package.json
@@ -10,19 +10,21 @@
     "license": "ISC",
     "dependencies": {
         "bcrypt": "^5.1.1",
-        "bootstrap": "^5.3.3",
         "body-parser": "^1.20.2",
+        "bootstrap": "^5.3.3",
         "cookie-parser": "^1.4.6",
         "cors": "*",
         "csurf": "^1.11.0",
         "express": "^4.19.2",
         "express-session": "^1.18.0",
-        "jest": "^29.7.0",
         "jsonwebtoken": "*",
+        "mockingoose": "^2.16.2",
         "mongoose": "*",
-        "mysql": "*"
+        "mysql": "*",
+        "supertest": "^6.3.4"
     },
     "devDependencies": {
-        "eslint": "^8.54.0"
+        "eslint": "^8.54.0",
+        "jest": "^29.7.0"
     }
 }
