--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.8",
         "bcrypt": "^5.1.1",
         "body-parser": "^1.20.2",
         "bootstrap": "^5.3.3",
@@ -19,7 +20,7 @@
         "express-session": "^1.18.0",
         "jest": "^29.7.0",
         "jsonwebtoken": "*",
-        "mongoose": "*",
+        "mongoose": "^8.3.1",
         "mysql": "*"
     },
     "devDependencies": {
