--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "test": "jest"
+        "test": "jest --coverage --detectOpenHandles"
     },
     "author": "",
     "license": "ISC",
