--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     image: mongo
     volumes:
       - data:/data/db
+    ports:
+      - "27017:27017"
   server:
     build: server
     ports:
