--- a/client/package.json
+++ b/client/package.json
@@ -45,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2"
   }
